fix text size / wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@
   width: 90%;
   padding: 12px;
   border-radius: 5px;
-  font-size: 1.25em;
+  font-size: 0.9em;
   border: none;
   outline: none;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
@@ -129,6 +129,7 @@ a:hover {
 
 a {
   color: inherit;
+  white-space: nowrap;
 }
 
 .error-message {
